# cut-cpp

./: BUILDING.md  CMakeLists.txt  CMakePresets.json  COMMERCIAL_LICENSE  HACKING.md  README.md
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
example/: CMakeLists.txt
include/cut-cpp/: cut-cpp.hpp  cut.hpp
source/: cut-cpp.cpp  cut.cpp  main.cpp
test/: CMakeLists.txt
test/source/: cut-cpp_test.cpp
